trying html height 101% to fix the scrollbar thing

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -2,7 +2,7 @@
 @import "rouge-github";
 
 html {
-  overflow-y: overlay;
+  height: 101%;
 }
 
 body {
